--- a/Online-Judge/src/main/resources/application.properties
+++ b/Online-Judge/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.jpa.properties.hibernate.hbm2ddl.auto = update
+spring.datasource.url = jdbc:mysql://localhost/onlinejudge
+spring.datasource.username = root
